<resources>
    <string name="app_name">Android 1.2.1</string>
    <string name="Subscription">Подписка</string>
    <string name="Username">Имя пользователя</string>
    <string name="eMail">Электронная почта</string>
    <string name="btnOk">OK</string>
    <string name="btnRemove">Удалить</string>
    <string name="conclusion_format">Подписка на рассылку успешно оформлена для пользователя
                        %1$s на электронный адрес %2$s</string>


</resources>