<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/subscription"
        android:layout_width="402dp"
        android:layout_height="76dp"
        android:layout_marginBottom="342dp"
        android:autoText="false"
        android:background="#3F51B5"
        android:text="@string/Subscription"
        android:textColor="#00BCD4"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRemove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="257dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:text="@string/Username"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subscription"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />

    <TextView
        android:id="@+id/email"
        android:layout_width="257dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:text="@string/eMail"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnOk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subscription"
        app:layout_constraintVertical_bias="0.467" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="214dp"
        android:layout_height="39dp"
        android:layout_marginStart="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/btnOk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.142" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="317dp"
        android:layout_height="63dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/btnOk"
        app:layout_constraintBottom_toTopOf="@+id/btnRemove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subscription"
        app:layout_constraintVertical_bias="0.964" />

    <Button
        android:id="@+id/btnRemove"
        android:layout_width="318dp"
        android:layout_height="63dp"
        android:layout_marginBottom="240dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/btnRemove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnOk"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnOk"
        app:layout_constraintTop_toBottomOf="@+id/subscription" />

    <TextView
        android:id="@+id/conclusion"
        android:layout_width="319dp"
        android:layout_height="129dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>